# tau

./: .gitignore  AGENT-LOOP.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  MONOREPO-STRUCTURE.md  PHASE-5-SUBPHASE-2-EVALUATION-JSON.md  PHASE-5-SUBPHASE-2-EVALUATION.md  README.md  ROADMAP.md  eval_output.json  package.sh  pyproject.toml  run_agent_loop.py
tau-agent-core/: README.md  pyproject.toml
tau-agent-core/src/tau_agent_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tau-agent-core/tests/: conftest.py  test_30_permission_gate.py  test_31_protected_paths.py  test_32_pirate.py  test_33_claude_rules.py  test_34_desktop_notify.py  test_35_auto_commit_on_exit.py  test_36_file_trigger.py  test_37_inline_bash.py  test_43_budget_ledger.py  test_53_router_ledger.py  test_agent_loop.py  test_agent_loop_types.py  test_agent_session.py  test_api_on_hook_bridge.py  test_append_entry_durable.py  test_append_only_compaction.py  test_before_agent_start_hook.py  test_blocked_call_render.py  test_budget.py  test_compaction_utils.py  test_context_hook.py  test_context_hook_removed.py  test_conversation_tree.py  test_ctx_session_ops.py  test_deferral_queue.py  test_event_bus.py  test_events.py  test_extension_config.py  test_extension_error_visibility.py  test_extension_loader.py  test_extension_record_sink.py  test_extension_registry.py  test_extension_runner.py  test_extension_tools_loop.py  test_extension_types.py  test_extensions_summary.py  test_gatekeeper.py  test_hook_dispatcher_threading.py  test_input_hook.py  (+28 more)
tau-ai/: README.md  pyproject.toml
tau-ai/tests/: conftest.py  test_abort.py  test_complete_simple.py  test_contract.py  test_openai_provider.py  test_reasoning_effort.py  test_reasoning_streaming.py  test_subphase1.py  test_subphase3.py  test_thinking_levels.py  test_tool_call_streaming_fix.py  test_tools.py  test_types.py
tau-coding-agent/: README.md  pyproject.toml
tau-coding-agent/tests/: conftest.py  test_38_todo.py  test_41_bookmarks.py  test_42_session_autoname.py  test_50_review_swarm.py  test_51_delegate_fleet.py  test_52_red_team_memory.py  test_54_consequence_engine.py  test_agent_session.py  test_agent_session_live_path.py  test_app_actions.py  test_app_extension_commands.py  test_app_extension_loading.py  test_app_extension_mgmt.py  test_app_lifecycle_hooks.py  test_app_parley_app.py  test_append_entry_reload.py  test_append_only_compaction_store.py  test_backend_reasoning.py  test_backend_tool_filter.py  test_before_agent_start_durable.py  test_chat_rendering.py  test_chat_widgets.py  test_cli.py  test_cli_args.py  test_config.py  test_context_surgeon.py  test_cost.py  test_ctx_fork_export.py  test_delegate.py  test_e5_integration_floor.py  test_e5_status_doc.py  test_ext_config_cli.py  test_ext_kit_gate.py  test_ext_kit_ledger.py  test_ext_kit_spawn.py  test_ext_kit_state.py  test_ext_kit_steer.py  test_ext_kit_stream.py  test_extension_dialogs.py  (+32 more)
(+175 files in other folders)
