[project]
name = "tau-monorepo"
version = "0.0.0"
description = "τ (tau-agent-core) monorepo"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tau-ai/tests", "tau-agent-core/tests", "tau-coding-agent/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
# Lint + format gate (enforced by .git/hooks/pre-commit). Scope mirrors the
# mypy config: the three package src trees. line-length 100 keeps the format
# churn small relative to the existing code.
line-length = 100
target-version = "py311"
extend-exclude = ["venv"]

# Default lint rules (pyflakes F + pycodestyle E4/E7/E9) are kept as-is; the
# formatter owns whitespace and wrapping, so E1/E2/E3 stay disabled to avoid
# fighting it. Import sorting (I) is intentionally deferred to a later pass.
