[project]
name = "tau-agent-core"
version = "0.0.0"
description = "τ-agent-core: Agent runtime, loop, tools, sessions, extensions"
requires-python = ">=3.11"
dependencies = [
    "tau-ai",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
